ready quick sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.17)
-project(counter_sort)
+project(parallel_sorts)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(counter_sort main.cpp par_count_sort.h helper.h common.h)
+add_executable(counter_sort test_count_sort.cpp count_sort.h helper.h common.h)
+
+find_package(OpenMP REQUIRED)
+
+add_executable(quick_sort test_quick_sort.cpp quick_sort.h helper.h common.h)
+
+target_link_libraries(quick_sort PRIVATE OpenMP::OpenMP_CXX)
